--- a/404.html
+++ b/404.html
@@ -50,8 +50,8 @@
     <script>
         // Router configuration
         const routes = {
-            '/posts/ai-roadmap-en': '/posts/ai-roadmap-en/index.html',
-            '/posts/ai-roadmap-uz': '/posts/ai-roadmap-uz/index.html',
+            '/posts/ai-roadmap-en': '/posts/ai-roadmap-en.html',
+            '/posts/ai-roadmap-uz': '/posts/ai-roadmap-uz.html',
             // Add more routes as needed
         };
 
