--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         </div>
 
         <div class="footer">
-            <p>© 2025 Tech Posts Collection. Built with passion for the AI community.</p>
+            <p>© 2025 Zako-AI Posts Collection. Built with passion for the AI community.</p>
         </div>
     </div>
 
