--- a/ai-roadmap-en.html
+++ b/ai-roadmap-en.html
@@ -406,7 +406,8 @@
                     'Fast.ai + PyTorch tutorials',
                     'Choose based on your interests',
                     'Build REST APIs with your models',
-                    'Create GitHub portfolio + LeetCode'
+                    'Create GitHub portfolio + LeetCode', 
+                    'We also offer Zako-AI intensive bootcamp courses'
                 ];
                 alert(`Phase ${index + 1} Tip: ${titles[index]}`);
             });
