--- a/ai-roadmap-uz.html
+++ b/ai-roadmap-uz.html
@@ -359,7 +359,7 @@
                 <div class="phase-content">
                     <h2 class="phase-title">Ishga Tayyorlanish</h2>
                     <span class="duration">1 oy</span>
-                    <p>Portfelingizni tayyorlang va intervyularga tayyorlaning</p>
+                    <p>Portfoliongizni tayyorlang va intervyularga tayyorlaning</p>
                     <div class="skills">
                         <span class="skill-tag">Portfel Loyihalari</span>
                         <span class="skill-tag">System Design</span>
@@ -379,7 +379,7 @@
             </div>
             <div class="stat-card">
                 <div class="stat-number">3-5</div>
-                <p>Kerakli Portfel Loyihalari</p>
+                <p>Kerakli Portfolio Loyihalari</p>
             </div>
             <div class="stat-card">
                 <div class="stat-number">2-3 soat</div>
@@ -402,7 +402,8 @@
                     'Fast.ai + PyTorch darsliklari',
                     'Qiziqishlaringizga qarab tanlang',
                     'Modellaringiz bilan REST API yarating',
-                    'GitHub portfel yarating + LeetCode'
+                    'GitHub Portfoliosini yarating + LeetCode', 
+                    'Biz ham Zako-AI intensiv kurslarini taklif qilamiz'
                 ];
                 alert(`${index + 1}-bosqich maslahati: ${titles[index]}`);
             });
