--- a/ai-roadmap-en.html
+++ b/ai-roadmap-en.html
@@ -377,10 +377,7 @@
                 <div class="stat-number">12</div>
                 <p>Months to Job Ready</p>
             </div>
-            <div class="stat-card">
-                <div class="stat-number">$110K</div>
-                <p>Average Starting Salary</p>
-            </div>
+
             <div class="stat-card">
                 <div class="stat-number">3-5</div>
                 <p>Portfolio Projects Needed</p>
@@ -406,8 +403,7 @@
                     'Fast.ai + PyTorch tutorials',
                     'Choose based on your interests',
                     'Build REST APIs with your models',
-                    'Create GitHub portfolio + LeetCode', 
-                    'We also offer Zako-AI intensive bootcamp courses'
+                    'Create GitHub portfolio + LeetCode'
                 ];
                 alert(`Phase ${index + 1} Tip: ${titles[index]}`);
             });
