--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
     <div class="container">
         <div class="header">
-            <h1>Tech Posts Collection</h1>
+            <h1>Zako-AI Tech Posts Collection</h1>
             <p>Exploring the frontiers of AI, machine learning, and modern technology</p>
         </div>
 
